...
      child: Column(
        children: <Widget>[
          Row(
            children: <Widget>[
              Expanded(
                child: InkWell(
                  key: const ValueKey<String>('job_seeker_profile_info_hotspot'),
                  onTap: onTap,
                  borderRadius: BorderRadius.circular(16),
                  child: Padding(
                    padding: const EdgeInsets.fromLTRB(9, 0, 0, 0),
                    child: Row(
                      children: <Widget>[
...
